[tool.poetry]
name = "newsbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
newsapi = "^0.1.1"
newsapi-python = "^0.2.6"
flask = "^1.1.2"
msg = "^0.7.8"
pafy = "^0.5.5"
python-vlc = "^3.0.12118"
python-youtube = "^0.8.0"
youtube_dl = "^2021.4.26"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
